--- a/src/view/StudentForm.fxml
+++ b/src/view/StudentForm.fxml
@@ -1,14 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.StudentFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="515.0" prefWidth="963.0" style="-fx-background-color: #f4f2f8;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentFormController">
+   <children>
+      <Label layoutX="30.0" layoutY="8.0" text="Student Management System" textFill="#0b1475">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Label>
+      <Separator layoutX="27.0" layoutY="46.0" prefHeight="5.0" prefWidth="359.0" />
+      <Label layoutX="62.0" layoutY="117.0" text="Student Id :">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="62.0" layoutY="171.0" text="Name :">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="63.0" layoutY="274.0" text="Contact :">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="63.0" layoutY="224.0" text="email :">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <JFXTextField fx:id="txtStudentId" layoutX="188.0" layoutY="100.0" prefHeight="25.0" prefWidth="124.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtStudentName" layoutX="187.0" layoutY="155.0" prefHeight="25.0" prefWidth="124.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtStudentContact" layoutX="190.0" layoutY="261.0" prefHeight="25.0" prefWidth="124.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtStudentEmail" layoutX="189.0" layoutY="208.0" prefHeight="25.0" prefWidth="124.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXTextField>
+      <Label layoutX="62.0" layoutY="325.0" text="Address :">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <JFXTextField fx:id="txtStudentAddress" layoutX="189.0" layoutY="310.0" prefHeight="25.0" prefWidth="124.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXTextField>
+      <Label layoutX="62.0" layoutY="373.0" text="NIC :">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <JFXTextField fx:id="txtStudentNic" layoutX="189.0" layoutY="358.0" prefHeight="25.0" prefWidth="124.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXTextField>
+      <JFXButton fx:id="btnAddStudent" layoutX="123.0" layoutY="439.0" onAction="#btnAddStudentOnAction" prefHeight="31.0" prefWidth="105.0" style="-fx-background-color: #1ecc4f;" text="Add Student" textFill="WHITE">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXButton>
+      <TableView fx:id="tblStudent" layoutX="346.0" layoutY="108.0" prefHeight="368.0" prefWidth="596.0">
+         <columns>
+            <TableColumn fx:id="colId" prefWidth="75.0" text="Student ID" />
+            <TableColumn fx:id="colName" prefWidth="109.0" text="Name" />
+            <TableColumn fx:id="colEmail" prefWidth="92.0" text="Email" />
+            <TableColumn fx:id="colContact" prefWidth="101.0" text="Contact" />
+            <TableColumn fx:id="colAddress" prefWidth="121.0" text="Address" />
+            <TableColumn fx:id="colNic" prefWidth="97.0" text="NIC" />
+         </columns>
+         <contextMenu>
+            <ContextMenu>
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#menuUpdateOnAction" text="Update" />
+                  <MenuItem mnemonicParsing="false" onAction="#menuDeleteOnAction" text="Delete" />
+               </items>
+            </ContextMenu>
+         </contextMenu>
+      </TableView>
+   </children>
 </AnchorPane>
